Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/GenLit1.out
GenLit1.java:16:5: compiler.err.type.var.cant.be.deref
1 error
